Add hero image and CSS styling for body and headings

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link href="assets/css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -74,6 +75,9 @@
           <!-- mb-5 gives extra margin spacing under lead text -->
           <p class="lead mb-5">Let's create something amazing together!</p>
         </div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Subscribe to my newsletter!
+        </button>
       </section>
     </header>
 
@@ -221,10 +225,59 @@
           </p>
         </div>
         <div class="col-12 col-md-10 col-lg-8">
-            <!--Add your form here-->
+          <!--Add your form here-->
+         <form class="row g-3">
+            <div class="col-lg-4">
+                <label for="full-name" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="full-name">
+            </div>
+            <div class="col-lg-4">
+                <label for="phonenumber" class="form-label">Phone number</label>
+                <input type="number" class="form-control" id="phonenumber">
+            </div>
+            <div class="col-lg-4">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+            <div class="col-12">
+                <label for="message" class="form-label">Message</label>
+                <textarea class="form-control" id="message" rows="3"> </textarea>
+            </div>
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary">Send</button>
+            </div>
+         </form>
         </div>
-      </div>
     </footer>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p>
+            Join my newsletter for the latest updates on my projects, coding tips, and industry insights delivered straight to your inbox.</p>
+            <form class="row g-3">
+        <div class="col-lg-6">
+            <label for="inputName" class="form-label">Name</label>
+            <input type="text" class="form-control" id="inputName">
+        </div>
+        <div class="col-lg-6">
+            <label for="inputEmail" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail">
+        </div>
+        <div class="col-12 mb-4">
+            <button type="submit" class="btn btn-primary">
+                Sign up!
+            </button>
+        </div>
+        </form>
+        </div>
+        </div>
+    </div>
+    </div>
 
     <!-- Bootstrap JS Script-->
     <script
