Remove rounded corners

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
           <!-- cols for cards -->
           <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
               <img
                 src="assets/images/wags-and-walks.webp"
                 class="card-img-top"
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
               <img
                 src="assets/images/we-wellness.webp"
                 class="card-img-top"
@@ -169,7 +169,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
               <img
                 src="assets/images/math-wiz.webp"
                 class="card-img-top"
@@ -188,7 +188,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
               <img
                 src="assets/images/bmi-calculator.webp"
                 class="card-img-top"
@@ -226,7 +226,7 @@
         </div>
         <div class="col-12 col-md-10 col-lg-8">
           <!--Add your form here-->
-         <form class="row g-3">
+         <form class="row g-3 sharp-corners">
             <div class="col-lg-4">
                 <label for="full-name" class="form-label">Full name</label>
                 <input type="text" class="form-control" id="full-name">
@@ -251,7 +251,7 @@
     </footer>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
-        <div class="modal-content">
+        <div class="modal-content sharp-corners">
         <div class="modal-header">
             <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -269,7 +269,7 @@
             <input type="email" class="form-control" id="inputEmail">
         </div>
         <div class="col-12 mb-4">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary sharp-corners">
                 Sign up!
             </button>
         </div>
