Add custom button CSS styles

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <!-- mb-5 gives extra margin spacing under lead text -->
           <p class="lead mb-5">Let's create something amazing together!</p>
         </div>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="btn btn-primary sharp-corners custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Subscribe to my newsletter!
         </button>
       </section>
@@ -269,7 +269,7 @@
             <input type="email" class="form-control" id="inputEmail">
         </div>
         <div class="col-12 mb-4">
-            <button type="submit" class="btn btn-primary sharp-corners">
+            <button type="submit" class="btn btn-primary custom-button">
                 Sign up!
             </button>
         </div>
